--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
         <!-- /* --- TESTIMONIALS --- */ -->
 
         <section class="testimonials">
+            
             <div class="container">
                 <div class="title">
                 <h3>AMAZING CRAFT</h3>
@@ -210,7 +211,7 @@
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat, voluptate!</p>
                 <h4>John Doe</h4>
                 <p>Marketing Manager</p>
-                <div class="rating">
+                <div class="rating-special-one">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
