CONTACT ME SECTION FINISHED

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <!-- /* --- TESTIMONIALS --- */ -->
 
         <section class="testimonials">
-            
+
             <div class="container">
                 <div class="title">
                 <h3>AMAZING CRAFT</h3>
@@ -239,6 +239,27 @@
         </section>
        
         <!-- /* --- TESTIMONIALS --- */ -->
+
+
+        <!-- /* --- CONTACT ME --- */ -->
+
+        <section class="contact">
+            <div class="container">
+                <h3>CONTACT ME</h3>
+                <h1>Got a Project? Let's Get in Touch!</h1>
+                <h3><i class="fa fa-envelope-o"></i> Lorem@website.com</h3>
+                <div class="quick-links">
+                    <div class="brand"><img src="./img/logo.png" alt=""></div>
+                    <ul>
+                        <li>Home</li>
+                        <li>Skills</li>
+                        <li>Services</li>
+                        <li>About</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <!-- /* --- CONTACT ME --- */ -->
 </body>
 </html>
 
